2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* UnicodeChecker.pm, DecodeHandle.pm: Tentative support
	for |read| method.

2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* UnicodeChecker.pm: New module.

2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* DecodeHandle.pm: Set error levels.

	* WebLatin1.pm: Support for |us-ascii| and |iso-8859-5|
	charsets (this module no longer for Latin1, but for Latin*
	encodings).

	* WebThai.pm: Support for |tis-620| charset.

2008-05-18  Wakaba  <wakaba@suika.fam.cx>

	* WebThai.pm, WebLatin1.pm: New modules.

	* DecodeHandle.pm: Support for fallback character mappings,
	used for WebLatin1 and WebThai encodings.

2008-05-18  Wakaba  <wakaba@suika.fam.cx>

	* DecodeHandle.pm (ShiftJIS): \xF0-\xFC should be considered
	as part of double-byte characters for more user-friendly error
	recovery.

2008-05-18  Wakaba  <wakaba@suika.fam.cx>

	* DecodeHandle.pm (getc): Ignore BOM if BOM pattern is specified.

2008-05-17  Wakaba  <wakaba@suika.fam.cx>

	* DecodeHandle.pm (ByteBuffer): New class.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* CharDet.pm (detect): Catch an error in detection function.

2007-11-19  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: New file.

	* UniversalCharDet.pm, UniversalCharDet.pod: New files.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* DecodeHandle.pm (create_decode_handle): Set canonical
	or specified name to |input_encoding| attribute.
	(uri_to_name): Reimplemented.
	(input_encoding): Return charset name returned
	by |uri_to_name| if available.
	($CharsetDef): Property |xml_name| is now contain
	only name defined in XML specifications.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* DecodeHandle.pm: New Perl module (created
	from manakai's |Encode.dis|).

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.
