@@ -1,5 +1,10 @@
 2008-09-11  Wakaba  <wakaba@suika.fam.cx>
 
+	* UnicodeChecker.pm, DecodeHandle.pm: Try to reduce the
+	number of string copies and method calls, first round.
+
+2008-09-11  Wakaba  <wakaba@suika.fam.cx>
+
 	* UnicodeChecker.pm, DecodeHandle.pm: Tentative support
 	for |read| method.
 
